[package]
name = "owner_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0", features = ["full"] }
tokio-util = {version = "0.7"}
etcd-client = "0.10"
anyhow = "*"
thiserror = "*"
log = "*"
env_logger = "*"
